# fastapi-rag-example

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9f129afcbb00_initial_migration.py
app/: main.py
app/api/v1/routers/: rag.py
app/application/: dependencies.py
app/application/dto/: rag.py
app/application/interfaces/: chunks.py  unit_of_work.py
app/application/services/: rag.py
app/core/: config.py
app/domain/: document_chunk.py
app/infrastructure/ai/chain/: ollama.py
app/infrastructure/ai/documents/: parser.py  splitter.py
app/infrastructure/ai/embeddings/: google.py  hf.py
app/infrastructure/ai/llm/: gemini.py
app/infrastructure/ai/prompt/: tamplate.py
app/infrastructure/logging/: decorators.py
app/infrastructure/postgres/: database.py  session.py  unit_of_work.py
app/infrastructure/postgres/models/: base_model.py  document_chunk.py
app/infrastructure/postgres/repos/: chunks.py
