[project]
name = "rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
